# sqeel-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: _tests.yml  ci.yml  release.yml
src/: completion_ctx.rs  config.rs  config.toml  db.rs  ddl.rs  highlight.rs  lib.rs  lsp.rs  persistence.rs  provider.rs  schema.rs  state.rs
